--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,11 @@ h1{
  font-family: consolas;
  
 }
+
+th:hover{
+  color: white;
+}
+
 td{
   padding: 1rem;
 }
@@ -63,12 +68,11 @@ td{
   margin-right: auto;
   width: 1200px
 }
-.app{
-  
-}
+
 .foot{
   bottom: 0;
   left: 0;
+  background-color: black;
   right: 0;
   position: fixed;
   width: 100%;
@@ -82,4 +86,14 @@ td{
   position: fixed;
   z-index: 10;
   width: 100%;
+}
+
+.tbody{
+  
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+}
+.liveTicker{
+ 
+ margin-left: 400px;
 }
